k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dress-dock-flow
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: dress-dock-flow
